Fixed gap problem

--- a/rockpaperscissors/style.css
+++ b/rockpaperscissors/style.css
@@ -56,7 +56,9 @@ button:not(:hover){
 #replay{
     display:flex;
     align-items: center;
-    justify-content: center;;
+    justify-content: center;
+    gap:30px;
+    margin-bottom: 30px;
 }
 
 #tryAgain{
@@ -66,6 +68,7 @@ button:not(:hover){
     color: white;
     visibility:hidden;
     justify-content: center;
+    gap:30px;
 
 }
 #tryAgain:hover{
